# toml file based on https://github.com/mrk-its/bevy_webgl2_app_template

[package]
name = "watersort"
version = "0.1.0"
authors = []
edition = "2018"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
#bevy = {version="0.5.0", default-features=false}
bevy = {version="0.5.0", default-features=true, features = ["dynamic"]}
bevy_webgl2 = {version="0.5.0", optional=true}
bevy_mod_picking = "0.4"

winit = {version = "0.24.0"}
rand = "0.8.4"
getrandom = {version="0.1", features=["wasm-bindgen"]}
rand_pcg = "0.3.1"

[profile.dev]
opt-level = 1
