[package]
name = "watersort"
version = "0.1.0"
authors = ["Frank Buss <fb@frank-buss.de>"]
edition = "2021"
#license = "MIT"
description = "a water sort game"
repository = "https://github.com/FrankBuss/water-sort"
keywords = ["water sort", "puzzle", "bevy"]
categories = ["game"]
resolver = "2"

[dependencies]
bevy = {version="0.6", default-features=true, features = ["mp3"]}
bevy_mod_raycast = "0.3"
bevy_mod_picking = "0.5"
rand = "0.8"
rand_pcg = "0.3"
